--- a/index.html
+++ b/index.html
@@ -3,14 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Flashcard</title>
 </head>
 <body>
   <main>
        <section id="container">
            <article class="cartao">
-
+               <div class="cartao__conteudo">
+                   <h3>Programação</h3>
+                   <div class="cartao__conteudo__pergunta">
+                        o que é Javascript?
+                   </div>
+                  <div class="cartao__conteudo__reposta">
+                       O Javascript é uma linguagem de Programação
+                  </div>
+              </div>
            </article>
+
+           <article class="cartao">
+            <div class="cartao__conteudo">
+                <h3>Programação</h3>
+                <div class="cartao__conteudo__pergunta">
+                     o que é Javascript?
+                </div>
+               <div class="cartao__conteudo__reposta">
+                    O Javascript é uma linguagem de Programação
+               </div>
+           </div>
+        </article>
+
+        <article class="cartao">
+          <div class="cartao__conteudo">
+              <h3>Programação</h3>
+              <div class="cartao__conteudo__pergunta">
+                   o que é Javascript?
+              </div>
+             <div class="cartao__conteudo__reposta">
+                  O Javascript é uma linguagem de Programação
+             </div>
+         </div>
+      </article>
        </section>
   </main>
   <footer>
