--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
                <div class="cartao__conteudo">
                    <h3>Programação</h3>
                    <div class="cartao__conteudo__pergunta">
-                        o que é Javascript?
+                       <p>o que é Javascript?</p>
                    </div>
                   <div class="cartao__conteudo__reposta">
-                       O Javascript é uma linguagem de Programação
+                      <p>O Javascript é uma linguagem de Programação</p>
                   </div>
               </div>
            </article>
@@ -25,10 +25,10 @@
             <div class="cartao__conteudo">
                 <h3>Programação</h3>
                 <div class="cartao__conteudo__pergunta">
-                     o que é Javascript?
+                    <p>o que é Javascript?</p>
                 </div>
                <div class="cartao__conteudo__reposta">
-                    O Javascript é uma linguagem de Programação
+                  <p>O Javascript é uma linguagem de Programação</p>
                </div>
            </div>
         </article>
@@ -37,10 +37,10 @@
           <div class="cartao__conteudo">
               <h3>Programação</h3>
               <div class="cartao__conteudo__pergunta">
-                   o que é Javascript?
+                <p>o que é Javascript?</p>
               </div>
              <div class="cartao__conteudo__reposta">
-                  O Javascript é uma linguagem de Programação
+                 <p>O Javascript é uma linguagem de Programação</p>
              </div>
          </div>
       </article>
