--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <main>
        <section id="container">
-           <article class="cartao">
+          <!--<article class="cartao">
                <div class="cartao__conteudo">
                    <h3>Programação</h3>
                    <div class="cartao__conteudo__pergunta">
@@ -19,31 +19,7 @@
                       <p>O Javascript é uma linguagem de Programação</p>
                   </div>
               </div>
-           </article>
-
-           <article class="cartao">
-            <div class="cartao__conteudo">
-                <h3>Programação</h3>
-                <div class="cartao__conteudo__pergunta">
-                    <p>o que é Javascript?</p>
-                </div>
-               <div class="cartao__conteudo__reposta">
-                  <p>O Javascript é uma linguagem de Programação</p>
-               </div>
-           </div>
-        </article>
-
-        <article class="cartao">
-          <div class="cartao__conteudo">
-              <h3>Programação</h3>
-              <div class="cartao__conteudo__pergunta">
-                <p>o que é Javascript?</p>
-              </div>
-             <div class="cartao__conteudo__reposta">
-                 <p>O Javascript é uma linguagem de Programação</p>
-             </div>
-         </div>
-      </article>
+           </article> -->
        </section>
   </main>
   <footer>
